style : fix the floor height so that lift won't overflow outside the floor

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,18 +71,24 @@ p {
   border-radius: 4px;
   margin: 0.2em;
 }
+
+
+.floordiv {
+
+    display : flex;
+}
+
 .floor {
   width: 100%;
   display: flex;
-  height: 30vh;
-  flex-direction: column;
-  justify-content: space-between;
+  height: 160px;
   border: 1px solid #ff6263;
+  position: relative;
 }
 
 .lift-div {
-  width: 150px;
-  height: 150px;
+  width: 90px;
+  height: 160px;
   margin-left: 1em;
   border: 0.5px solid red;
   z-index: 1;
@@ -93,7 +99,8 @@ p {
 
 .lift {
   display: flex;
-  margin-left: 6em;
+  gap: 1em;
+ 
 }
 
 .left-door {
@@ -112,6 +119,14 @@ p {
   height: 100%;
   transition: transform 2.5s linear;
   z-index: 2;
+}
+
+.btn-div {
+
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+   margin-right: 1em;
 }
 
 @media (max-width: 400px) {
